# tds-hello-vineetha

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tds_hello_vineetha/: __init__.py
test/: test_greet.py
